# HyperDbgUnified

./: .gitignore  CMakeLists.tar  CMakeLists.txt  EPT_HOOK_FIX_REPORT.md  bsod_disasm.ps1  build.bat  debug-demo.cpp  debug-demo.cpp.bak  enable-testsigning.bat  epthook-demo.cpp  epthook-demo.cpp.bak  ewdk.cmake  fix_dump_path.bat  hook-direct.cpp  hook-direct.h  hook_info.ini  任务  运行日志.txt
.github/workflows/: build.yml
.trae/skills/hyperdbg-api-refactor/: SKILL.md
scripts/: remove-linux.py  strip-comments.py
x64dbg_mcp/: x64dbg_mcp.dp32  x64dbg_mcp.dp64
新建文件夹/: PoolManager-bsod-fix.patch  set_dump_d.ps1
